--- a/index.html
+++ b/index.html
@@ -41,9 +41,17 @@
         <ul>
             <li class="game-update">
                 <h3>
+                Party Spiel
+                </h3>
+                <p>
+                Version 0.1.2c
+                </p>
+            </li>
+            <li class="game-update">
+                <h3>
                 Ein unglaublich krasses online Party Spiel!
                 </h3>
-                <img src = "https://drive.google.com/thumbnail?id=1e0BOfU0j8fjCQtN2IlzJPSWCijPNHM7-" alt="Party Game!">
+                <img src = "https://drive.google.com/thumbnail?id=1e0BOfU0j8fjCQtN2IlzJPSWCijPNHM7-" alt="Party Game!"> 
                 <p>
                 Dieser Launcher wird dir das Installieren vereinfachen.
                 </p>
