--- a/index.html
+++ b/index.html
@@ -63,6 +63,14 @@
                 <p>
                 Wenn jemand einen Minispielvorschlag hat kann er sich sehr gerne an mich wenden. Ich freue mich sehr über alle Vorschläge!
                 </p>
+            </li>           
+            <li class="game-update">
+                <h3>
+                Der Launcher ist jetzt voll funktionstüchtig!
+                </h3>
+                <p>
+                Endlich ist der Launcher einsatzbereit. Nun müsst ihr euch das Spiel nicht immer über MediaFire herunterladen und die alten Dateien löschen!
+                </p>
             </li>
         </ul>
     </body>
