--- a/index.html
+++ b/index.html
@@ -55,7 +55,15 @@
                 <p>
                 Dieser Launcher wird dir das Installieren vereinfachen.
                 </p>
-            </li>          
+            </li>  
+            <li class="game-update">
+                <h3>
+                Offline Minispiele
+                </h3>
+                <p>
+                Ich werde jetzt bald anfangen, an einem offline Minispielmodus zu arbeiten. Wenn ihr Ideen habt, was das Spiel noch gebrauchen könnte, könnt ihr euch gerne an mich wenden!
+                </p>
+            </li> 
             <li class="game-update">
                 <h3>
                 Minispielvorschläge sind jederzeit willkommen!
