--- a/index.html
+++ b/index.html
@@ -1,85 +1,102 @@
 <html>
-    <head>
-        <title>Party Game Updates</title>
-        <style>
-            * {
-                box-sizing: border-box;
-            }
-            body {
-                background: #587a96;
-                color: #3d413e;
-            }
-            p:last-child{
-                margin-bottom: 0;
-            }
-            p {
-                font-family: serif;
-                font-size: 2em;
-            }
-            ul {
-                list-style: none;
-                padding: 0;
-                margin: 0;
-            }
-            li {
-                background: #bedaf2;
-                padding: 0;
-                margin-bottom: 3em;
-            }
-            h3 {
-                margin-top: 0;
-                font-size: 3em;
-                color: #202f58;
-            }
-            img {
-                width: 80%;
-                max-width: 800px;
-            }
-        </style>
-    </head>
-    <body>
-        <ul>
-            <li class="game-update">
-                <h3>
+
+<head>
+    <title>Party Game Updates</title>
+    <style>
+        * {
+            box-sizing: border-box;
+        }
+
+        body {
+            background: #587a96;
+            color: #3d413e;
+        }
+
+        p:last-child {
+            margin-bottom: 0;
+        }
+
+        p {
+            font-family: serif;
+            font-size: 2em;
+        }
+
+        ul {
+            list-style: none;
+            padding: 0;
+            margin: 0;
+        }
+
+        li {
+            background: #bedaf2;
+            padding: 0;
+            margin-bottom: 3em;
+        }
+
+        h3 {
+            margin-top: 0;
+            font-size: 3em;
+            color: #202f58;
+        }
+
+        img {
+            width: 80%;
+            max-width: 800px;
+        }
+
+    </style>
+</head>
+
+<body>
+    <ul>
+        <li class="game-update">
+            <h3>
                 Party Spiel
-                </h3>
-                <p>
+            </h3>
+            <p>
                 Version 0.1.2c
-                </p>
-            </li>
-            <li class="game-update">
-                <h3>
+            </p>
+        </li>
+        <li class="game-update">
+            <h3>
                 Ein unglaublich krasses online Party Spiel!
-                </h3>
-                <img src = "https://drive.google.com/thumbnail?id=1e0BOfU0j8fjCQtN2IlzJPSWCijPNHM7-" alt="Party Game!"> 
-                <p>
+            </h3>
+            <img src="https://drive.google.com/thumbnail?id=1e0BOfU0j8fjCQtN2IlzJPSWCijPNHM7-" alt="Party Game!">
+            <p>
                 Dieser Launcher wird dir das Installieren vereinfachen.
-                </p>
-            </li>  
-            <li class="game-update">
-                <h3>
-                Offline Minispiele
-                </h3>
-                <p>
-                Ich werde jetzt bald anfangen, an einem offline Minispielmodus zu arbeiten. Wenn ihr Ideen habt, was das Spiel noch gebrauchen könnte, könnt ihr euch gerne an mich wenden!
-                </p>
-            </li> 
-            <li class="game-update">
-                <h3>
+            </p>
+        </li>
+        <li class="game-update">
+            <h3>
+                To-Do-Liste
+            </h3>
+            <p>
+                - Stats
+            </p>
+            <p>
+                - Offline Minispiele (Zum Üben)
+            </p>
+            <p>
+                - Mehr Musik
+            </p>
+        </li>
+        <li class="game-update">
+            <h3>
                 Minispielvorschläge sind jederzeit willkommen!
-                </h3>
-                <p>
+            </h3>
+            <p>
                 Wenn jemand einen Minispielvorschlag hat kann er sich sehr gerne an mich wenden. Ich freue mich sehr über alle Vorschläge!
-                </p>
-            </li>           
-            <li class="game-update">
-                <h3>
+            </p>
+        </li>
+        <li class="game-update">
+            <h3>
                 Der Launcher ist jetzt voll funktionstüchtig!
-                </h3>
-                <p>
+            </h3>
+            <p>
                 Endlich ist der Launcher einsatzbereit. Nun müsst ihr euch das Spiel nicht immer über MediaFire herunterladen und die alten Dateien löschen!
-                </p>
-            </li>
-        </ul>
-    </body>
+            </p>
+        </li>
+    </ul>
+</body>
+
 </html>
