--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 Party Spiel
             </h3>
             <p>
-                Version 0.1.2c
+                Version 0.1.2d
             </p>
         </li>
         <li class="game-update">
