--- a/index.html
+++ b/index.html
@@ -90,10 +90,10 @@
         </li>
         <li class="game-update">
             <h3>
-                Der Launcher ist jetzt voll funktionstüchtig!
+                Der Launcher hat wohl doch noch Bugs
             </h3>
             <p>
-                Endlich ist der Launcher einsatzbereit. Nun müsst ihr euch das Spiel nicht immer über MediaFire herunterladen und die alten Dateien löschen!
+                Wenn du das Spiel nicht über den Launcher herunterladen kannst, schreibe bitte einen Bugreport auf meiner Website!
             </p>
         </li>
     </ul>
