--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
         </li>
         <li class="game-update">
             <h3>
-                Der Launcher hat wohl doch noch Bugs
+                Der Launcher hat wohl doch noch Bugs...
             </h3>
             <p>
                 Wenn du das Spiel nicht über den Launcher herunterladen kannst, schreibe bitte einen Bugreport auf meiner Website!
