--- a/index.html
+++ b/index.html
@@ -54,7 +54,9 @@
                 Party Spiel
             </h3>
             <p>
-                Version 0.1.2d
+                Version 0.1.2e
+                
+                Launcherversion 0.1a auf Webseite herunterladbar!
             </p>
         </li>
         <li class="game-update">
@@ -70,9 +72,6 @@
             <h3>
                 To-Do-Liste
             </h3>
-            <p>
-                - Stats
-            </p>
             <p>
                 - Offline Minispiele (Zum Üben)
             </p>
@@ -90,10 +89,10 @@
         </li>
         <li class="game-update">
             <h3>
-                Der Launcher hat wohl doch noch Bugs...
+                Im Fall von Fehlermeldungen oder Bugs:
             </h3>
             <p>
-                Wenn du das Spiel nicht über den Launcher herunterladen kannst, schreibe bitte einen Bugreport auf meiner Website!
+                Bitte den Bug auf der Webseite unter der Kategorie "Bugreports" melden. Danke!
             </p>
         </li>
     </ul>
