--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                 
             </p>
             <p>
-                Launcherversion 0.1a auf Webseite herunterladbar!
+                Launcherversion 0.1b auf Webseite herunterladbar!
             </p>
         </li>
         <li class="game-update">
