--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 Party Spiel
             </h3>
             <p>
-                Version 0.1.2f
+                Version 0.1.2g
             </p>
             <p>
                 
